2006-01-01  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Poa/AOM.java (add):
	Changed parameter Object into gnuServantObject.
	(Obj.object): Changed type to gnuServantObject.
	(findObject): Rewritten.

2006-01-01  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jni/qt-peer/mainqtthread.cpp: Remove call to disable double
	buffering. Ability has gone in Qt-4.1.x.

	* configure.ac (QT_CFLAGS): Check for 4.1.0 version and for QtCore
	to have the right include flags.

2006-01-01  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/security/MessageDigest.java (getInstance(String,String)):
	Use trimmed copy of provider name.
	* gnu/java/security/Engine.java
	(getInstance(String,String,Provider,Object[])): Use trimmed copy of
	service and algorithm names.

2006-01-01  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/net/InetAddress.java (getAllByName): use LOCALHOST if
	localhost is null or is an empty string. Trim hostname before
	lookup.

2005-12-31  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Poa/gnuPOA.java (reference_to_servant): 
	Throw WrongAdapter with explaining message.

2005-12-31  Mark Wielaard  <mark@klomp.org>

	* java/text/Bidi.java (requiresBidi): Also test against character
	types L, EN, ES, ET, AN, CS, S and WS.

2005-12-31  Chris Burdess  <dog@gnu.org>

	* gnu/xml/dom/DomNamedNodeMap.java,
	  gnu/xml/dom/DomNode.java,
	  gnu/xml/dom/ls/SAXEventSink.java,
	  gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Fix entity reference DOM construction
	  and correct DOM tree normalisation.

2005-12-30  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/AttributeException.java,
	* javax/print/URIException.java,
	* javax/print/FlavorException.java,
	* javax/print/PrintException.java:
	Added and updated javadocs to class and methods.

2005-12-30  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/package.html: Added description.
	* javax/print/attribute/standard/MediaSize.java: 