@@ -1,3 +1,8 @@
+2006-01-03  Raif S. Naffah  <raif@swiftdsl.com.au>
+
+	* java/security/Security.java (getProvider): Ensures provider's name is
+	  not null, not an empty string, and is trimmed before usage.
+
 2006-01-01  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* gnu/CORBA/Poa/AOM.java (add):
